# crypto-tg

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
locales/: buttons.json  ru.json
src/bot/handlers/: bitcoin_wallets_handler.py  start_handler.py  tron_wallets_handler.py  wallets_handler.py
src/crypto_impl/: bitcoin.py  tron.py
src/mongo_manager/: mongo_manager.py
src/string_parser/: string_parser.py
